stable with sound

--- a/monster-fight/src/main/resources/translate.properties
+++ b/monster-fight/src/main/resources/translate.properties
@@ -48,3 +48,4 @@ magMonsterPassword=%s'in \u015fifresini gir:
 titleMonsterPassword=\u015eifre gir
 titleError=HATA!
 btnSoundOff=Sessiz
+magNoQuestionSelected=Se\u00e7ili soru yok
